--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@ body {
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;*/
-
   background: var(--bg-url) top center/cover;
+  height: 100vh;
 }
 
 * {
@@ -166,4 +166,14 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+
+/* media */
+@media(min-width: 700px){
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+  .light{
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  } 
 }
