--- a/style.css
+++ b/style.css
@@ -79,12 +79,17 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+
+  animation: slide-back 0.4s;
 }
 
 .light #switch button{
-  right: 0;
-  left: initial;
+  animation: slide-in 0.4s forwards;
 
+}
+
+#switch button:hover{
+  outline: 8px solid var(--stroke-color);
 }
 
 #switch span {
@@ -176,4 +181,23 @@ footer {
   .light{
     --bg-url: url(./assets/bg-desktop-light.jpg);
   } 
+}
+
+/*animacao */
+@keyframes slide-in{
+  from{
+    left: 0;
+  }
+  to{
+    left: 50%;
+  }
+}
+
+@keyframes slide-back{
+  from{
+    left: 50%;
+  }
+  to{
+    left: 0%;
+  }
 }
